syntax = "proto3";
package server;

message GetRequest {
  string key = 1;
}

message GetResponse {
  string status = 1;
  string value = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  string status = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  string status = 1;
}

message SyncRequest {
}

message SyncResponse {
  string status = 1;
}

service ANDB {
  rpc Get(GetRequest) returns (GetResponse) { }
  rpc Set(SetRequest) returns (SetResponse) { }
  rpc Delete(DeleteRequest) returns (DeleteResponse) { }
  rpc Sync(SyncRequest) returns (SyncResponse) { }
}